--- a/page_3.html
+++ b/page_3.html
@@ -3,20 +3,19 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div>
-      <div class="flex-box" id="id5">
-        <div>
+    <div id="idd0">
+      <div id="idd1">
         <p id="id4">
           Childhood Memories are connected with Dextor's Laboratory
         </p>
-        <div>
-        <div>
+      </div>
+      <div id="idd2">
         <img
           src="https://images.unsplash.com/photo-1533837380560-75f4b1461e8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           width="auto"
         />
-        </div>
-      <div class="class12">
+      </div>
+      <div id="idd3">
         <p>
           There is nothing more beautiful than the memories of childhood.
           Childhood is the most precious time in one’s life. The memories of
@@ -26,12 +25,18 @@
           an important role in one’s development and how we grow as people. It
           is the time to revel in the fun and enjoy to the maximum.
         </p>
-       
       </div>
-      <div> 
-        <img src="https://images.unsplash.com/photo-1546019473-8c98a02f85b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="300px">
-        <img src="https://images.unsplash.com/photo-1489942986787-cded4ecf962e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="300px">
-        <p id="id6"><a href="index.html" class="class11">Go To First Page</a></p>
+
+      <div id="idd4">
+        <img
+          src="https://images.unsplash.com/photo-1489942986787-cded4ecf962e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          width="400px"
+        />
+      </div>
+      <div id="idd5">
+        <p id="id6">
+          <a href="index.html" class="class11">Go To First Page</a>
+        </p>
       </div>
     </div>
   </body>
