--- a/page_1.html
+++ b/page_1.html
@@ -1,53 +1,132 @@
 <html>
   <head>
+    <title>Cartoon Network Shows</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=McLaren&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="class3">
-      <div>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Cartoon_Network_2010_logo.svg/1024px-Cartoon_Network_2010_logo.svg.png"
-          width="200px"
-        />
+    <div id="top-div" class="pink">
+      <p id="heading">
+        Top THREE cartoons of cartoon network
+      </p>
+    </div>
+
+    <div class="flex">
+      <div class="blue">
+        <div>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Cartoon_Network_2010_logo.svg/1024px-Cartoon_Network_2010_logo.svg.png"
+            alt="cartoon network"
+          />
+        </div>
+
+        <div>
+          <p>
+            Cartoon Network is an American cable television channel owned by
+            Warner Bros. Entertainment, a division of AT&T's WarnerMedia. The
+            channel was launched on October 1, 1992, and primarily broadcasts
+            animated television series, mostly children's programming, ranging
+            from action to animated comedy. It operates usually from 6:00 AM to
+            8:00 PM (ET/PT) and is targeted at children between ages 7 and 15.
+            Its overnight daypart block Adult Swim is aimed at young adults and
+            is treated as a separate entity for promotional purposes and as a
+            separate channel by Nielsen for ratings purposes.[1] A Spanish
+            language audio track for select programs is accessible via second
+            audio programing (SAP); some TV providers offer the Spanish feed as
+            a separate channel by removing the main English-language audio
+            track.
+          </p>
+        </div>
       </div>
-      <div class="class1">
-        <p>
-          Cartoon Network is an American cable television channel owned by
-          Warner Bros. Entertainment, a division of AT&T's WarnerMedia. The
-          channel was launched on October 1, 1992, and primarily broadcasts
-          animated television series, mostly children's programming, ranging
-          from action to animated comedy. It operates usually from 6:00 AM to
-          8:00 PM (ET/PT) and is targeted at children between ages 7 and 15. Its
-          overnight daypart block Adult Swim is aimed at young adults and is
-          treated as a separate entity for promotional purposes and as a
-          separate channel by Nielsen for ratings purposes.[1] A Spanish
-          language audio track for select programs is accessible via second
-          audio programing (SAP); some TV providers offer the Spanish feed as a
-          separate channel by removing the main English-language audio track.
-        </p>
-        <p id="id6">
-          <a href="page_2.html" target="_blank" class="class11"
+
+      <div class="purple">
+        <div>
+          <img
+            src="https://wallpapercave.com/wp/mpzRzI0.jpg"
+            alt="teen titans"
+          />
+        </div>
+
+        <div>
+          <p><b>1. Teen Titans</b></p>
+          <p>
+            Teen Titans became one of Cartoon Network's most beloved and
+            critically acclaimed series, renowned for its character development
+            and serious themes. During its run, the series was nominated for
+            three Annie Awards and one Motion Picture Sound Editors Award.
+            Spin-off media included comics, DVD releases, video games, music
+            albums, and collectible toys. Reruns have aired on Cartoon Network's
+            retro animation sister channel Boomerang until June 1, 2014.[2] In
+            2013, the show spawned a spin-off, titled Teen Titans Go!, which
+            received a theatrical film released on July 27, 2018, titled Teen
+            Titans Go! To the Movies.
+          </p>
+        </div>
+      </div>
+
+      <div class="green">
+        <div>
+          <img
+            src="https://wallpapercave.com/wp/wp1875416.jpg"
+            alt="powerpuff girls"
+          />
+        </div>
+
+        <div>
+          <p><b>2.The Powerpuff Girls</b></p>
+          <p>
+            The Powerpuff Girls is an American superhero animated television
+            series created by animator Craig McCracken for Cartoon Network and
+            the fifth of the network's Cartoon Cartoons brand. The series was
+            produced by Hanna-Barbera Productions in its first four seasons, and
+            by Cartoon Network Studios in its final two seasons. It centers on
+            Blossom, Bubbles, and Buttercup, three kindergarten-aged girls with
+            superpowers. The girls all live in the fictional city of Townsville
+            with their father and creator, a scientist named Professor Utonium,
+            and are frequently called upon by the city's mayor to help fight
+            nearby criminals and other enemies using their powers.
+          </p>
+        </div>
+      </div>
+
+      <div class="violet">
+        <div>
+          <img
+            src="https://cdn.vox-cdn.com/thumbor/2s-f5Qgtul2oAOsGzsuIfaci-L8=/0x0:637x355/1400x1400/filters:focal(269x128:369x228):format(png)/cdn.vox-cdn.com/uploads/chorus_image/image/51105501/adventuretime.0.png"
+            alt="Adventure Time"
+          />
+        </div>
+
+        <div>
+          <p><b>3.Adventure Time</b></p>
+          <p>
+            Adventure Time is an American fantasy animated television series
+            created by Pendleton Ward for Cartoon Network. Produced by
+            Frederator Studios and Cartoon Network Studios, the series follows
+            the adventures of a boy named Finn voiced by Jeremy Shada and his
+            best friend and adoptive brother Jake John DiMaggio a dog with the
+            magical power to change size and shape at will. Finn and Jake live
+            in the post-apocalyptic Land of Ooo, where they interact with
+            Princess Bubblegum Hynden Walch, the Ice King Tom Kenny, Marceline
+            Olivia Olson, BMO Niki Yang, and others. The series is based on a
+            2007 short produced for Nicktoons and Frederator Studios' animation
+            incubator series Random! Cartoons. After the short became a viral
+            hit on the Internet, Cartoon Network commissioned a full-length
+            series, which previewed on March 11, 2010. The show officially
+            premiered on April 5, 2010, and ended on September 3, 2018.
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <p id="button">
+          <a href="page_2.html" target="_blank" class="button-color"
             >Go To Next Page</a
           >
         </p>
-      </div>
-    </div>
-    <div class="class6">
-      <p id="id1">
-        Dextor's Laboratory is one of the top TEN cartoons of cartoon network
-      </p>
-      <div>
-        <h2>TEEN TITONS</h2>
-        <img src="https://wallpapercave.com/wp/mpzRzI0.jpg" width="300px" />
-      </div>
-      <div>
-        <h2>DEXTER'S LABORATORY</h2>
-        <img src="https://wallpapercave.com/wp/wp2367924.jpg" width="300px" />
-        <h3>
-          <a href="page_2.html " target="_blank"
-            >List of Top Ten Cartoons of Cartooon network</a
-          >
-        </h3>
       </div>
     </div>
   </body>
