--- a/page_3.html
+++ b/page_3.html
@@ -1,21 +1,22 @@
 <html>
   <head>
+    <title>Childhood Memories</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=McLaren&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div id="idd0">
-      <div id="idd1">
-        <p id="id4">
-          Childhood Memories are connected with Dextor's Laboratory
-        </p>
-      </div>
-      <div id="idd2">
+    <div class="box-grid">
+      <div id="box-1">
         <img
-          src="https://images.unsplash.com/photo-1533837380560-75f4b1461e8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          width="auto"
+          id="image"
+          src="https://images.unsplash.com/photo-1502086223501-7ea6ecd79368?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1446&q=80"
+          alt="childhood memories"
         />
       </div>
-      <div id="idd3">
+      <div id="box-2">
         <p>
           There is nothing more beautiful than the memories of childhood.
           Childhood is the most precious time in one’s life. The memories of
@@ -26,16 +27,42 @@
           is the time to revel in the fun and enjoy to the maximum.
         </p>
       </div>
-
-      <div id="idd4">
+      <div class="childhood-image">
         <img
-          src="https://images.unsplash.com/photo-1489942986787-cded4ecf962e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          width="400px"
+          src="https://images.unsplash.com/photo-1535316228490-e814129b42df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80"
         />
       </div>
-      <div id="idd5">
-        <p id="id6">
-          <a href="index.html" class="class11">Go To First Page</a>
+      <div class="childhood-image">
+        <img
+          src="https://images.unsplash.com/photo-1503525843663-de9d754d9b3c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+        />
+      </div>
+      <div id="box-5">
+        <p>
+          Today is the age of internet where children stick to indoor activities
+          and spend maximum time indoors. But outdoor activities are equally
+          important to keep the mind healthy. Also, it has been scientifically
+          proven that children learn more while playing. Playing outdoor games
+          build confidence and physical strength. It opens their mind to use
+          their creativity and imagination. It is while playing the outdoor
+          games children interact with the world around them.
+        </p>
+      </div>
+      <div class="childhood-image">
+        <img
+          src="https://images.unsplash.com/photo-1486280380840-0531135d75af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80"
+        />
+      </div>
+      <div id="box-7">
+        <p>
+          I dreamt of my childhood home last night. Which is a funny thing to
+          say when one actually had more than one childhood home. In fact, I
+          lived in five different homes until the ripe age of 18 when I left my
+          small town for the big city. But when I dream of my childhood home,
+          it’s always the same one. The middle one where I lived from the age of
+          about four to eleven (give or take a year). I bet my younger sisters
+          do not have many memories of this home but it’s always where I go to
+          when thinking of childhood.
         </p>
       </div>
     </div>
